vlib/v/checker/tests/ptr_slice.vv
struct Foo {
}

fn jeje() &Foo {
    return &Foo{}
}

fn main() {
    fs := jeje()[1..]
    println(fs)
    vs := byteptr(0)[..3]
    println(vs)
}
